# swagger.json
@@ -17,7 +17,11 @@
     "tags": [
         {
             "name": "Users",
-            " description": " The Users managing API"
+            "description":"The User managing API"
+        },
+        {
+            "name": "Property",
+            "description":"Property sorting API"
         }
     ],
     "paths": {
@@ -31,6 +35,7 @@
                 "produces": [
                     "application/json"
                 ],
+                "consumes":["multipart/form-data","application/x-www.form.urlencoded"],
                 "responses": {
                     "200": {
                         "description": "User found successfully!"
@@ -61,21 +66,21 @@
                         "name": "fullName",
                         "description": "Username of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     },
                     {
                         "in": "formData",
                         "name": "Email",
                         "description": "Email of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     },
                     {
                         "in": "formData",
                         "name": "Password",
                         "description": "Password of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -113,7 +118,7 @@
                         "name": "id",
                         "description": "The autogenerated id of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -141,7 +146,7 @@
                     "name":"id",
                     "description":"The auto-generated id of the user",
                     "type":"string",
-                    "required":"true"
+                    "required":true
                 }
                 ],
                 "responses": {
@@ -171,21 +176,21 @@
                         "name": "fullName",
                         "description": "Username of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     },
                     {
                         "in": "formData",
                         "name": "Email",
                         "description": "Email of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     },
                     {
                         "in": "formData",
                         "name": "Password",
                         "description": "Password of the user",
                         "type": "string",
-                        "required": "true"
+                        "required": true
                     },
                   
                     { 
@@ -193,7 +198,7 @@
                     "name":"id",
                     "description":"Id of the user",
                     "type":"string",
-                    "required":"true"
+                    "required":true
                 }
 
                     
@@ -218,6 +223,50 @@
                     
                 }
 
+            }
+        },
+        "/api/search/":{
+            "get":{
+                "tags":[
+                    "Property"
+                ],
+                "summary":"Returns different properties based ont he filtering query",
+                "description":"Returns different properties based ont he filtering query",
+                "produces":["application/json"],
+                "consumes":["multipart/form-data","application/x-www.form.urlencoded"],
+                "parameters":[
+                    {
+                        "in":"query",
+                        "name":"properties",
+                        "required":"true",
+                        "schema":{
+                            "type":"string",
+                            "enum":["rent,housemate,sale"]
+                            
+                        }
+                    }
+                ],"responses":{
+                 
+                    "200": {
+                        "description": "Success"
+                    },
+                    "203": {
+                        "description": "Updated"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                
+            }
+
+
+                
             }
         }
     }
